Fix misalignment of project titles

--- a/index.css
+++ b/index.css
@@ -577,10 +577,14 @@ dialog .close:focus:before {
 
 
 .columns h4 {
-	text-align: center;
 	margin: 0;
 	margin-bottom: 0.5rem;
 	font-size: 1.5rem;
+	height: 3rem;
+	vertical-align: bottom;
+	display: flex;
+	align-items: end;
+	justify-content: center;
 }
 
 .columns p,
